--- a/Languages/default-ru.xml
+++ b/Languages/default-ru.xml
@@ -2760,7 +2760,7 @@
 	<string id="16270" value="Вышло время запроса на загрузку с %s, закрываю связь."/>
 	<string id="16271" value="Соединение загрузки с %s закрывается из-за нехватки трафика."/>
 	<string id="16272" value="Хост %s не имеет файла «%s» для загрузки."/>
-	<string id="16273" value="Во время загрузки хост % послал ошибочный HTTP ответ."/>
+	<string id="16273" value="Во время загрузки хост %s послал ошибочный HTTP ответ."/>
 	<string id="16274" value="Во время загрузки хост %s послал ответ: %s (%s)."/>
 	<string id="16275" value="У хоста %s версия загрузки «%s» имеет другой адрес ссылки (URN), прерываю."/>
 	<string id="16276" value="У хоста %s версия загрузки «%s» имеет другой размер, прерываю."/>
