--- a/Languages/default-hr.xml
+++ b/Languages/default-hr.xml
@@ -2738,7 +2738,7 @@
 	<string id="16270" value="Isteklo je vrijeme zahtjeva za skidanje sa %s, prekidam vezu."/>
 	<string id="16271" value="Closing download connection %s due to lack of traffic."/>
 	<string id="16272" value="Domačin skidanja %s nema potrbnu &quot;%s&quot; datoteku."/>
-	<string id="16273" value="Download host % responded with an invalid HTTP response."/>
+	<string id="16273" value="Download host %s responded with an invalid HTTP response."/>
 	<string id="16274" value="Download host %s responded with %s (%s)."/>
 	<string id="16275" value="Download host %s's version of &quot;%s&quot; has a different URN, aborting."/>
 	<string id="16276" value="Download host %s's version of &quot;%s&quot; has a different length, aborting."/>
