--- a/Languages/default-en.xml
+++ b/Languages/default-en.xml
@@ -2529,6 +2529,7 @@
 <!-- Tips displayed when mouse is moved over controls in the dialogs -->
 <controlTips>
 	<tip id="IDC_THROTTLE_MODE" message="In the maximum mode the bandwidth won't exceed the specified value. In the average mode it will fluctuate around the value to both sides."/>
+	<tip id="IDC_REGEXP" message="Enter regular expressions in perl syntax.{n}The search keywords can be specified in a form of &lt;n&gt;, where n is number between 1 and 9. If you want to put all keywords each after other, use &lt;_&gt; markup."/>
 	<tip id="IDC_SHARE_PARTIALS" message="This setting has no effect on downloads previously started, also this setting is ignored if the file have the eDonkey hash and the eDonkey network is enabled or if it is a torrent.{n}However this setting isn't ignored if the download is paused.{n}{n}ATTENTION: Use this option only in case of real necessity, if you abuse of the option you may be banned."/>
 </controlTips>
 <!-- Localised Strings -->
@@ -3845,7 +3846,7 @@
 		<control caption="Search"/>
 		<control caption="Cancel"/>
 	</dialog>
-	<dialog name="CFilterSearchDlg" cookie="BuEdStBuStEdStEdStEdmsStBuBuBuBuBuBuBuBuBuCoBuBuBuBuBuBuBu" caption="Filter Matches">
+	<dialog name="CFilterSearchDlg" cookie="BuEdBuStBuStEdStEdStEdmsStBuBuBuBuBuBuBuBuBuBuBuCoBuBuBuBuBu" caption="Filter Matches">
 		<control caption="Only show matches which include the _words:"/>
 		<control/>
 		<control caption="( you can also exclude words with -word )"/>
@@ -3859,21 +3860,21 @@
 		<control caption="sources."/>
 		<control caption="_Hide:"/>
 		<control caption="Busy hosts"/>
-		<control caption="Firewalled/push hosts"/>
-		<control caption="Unstable hosts"/>
 		<control caption="Non-matching files"/>
+		<control caption="Firewalled/push hosts"/>
 		<control caption="Files you have already"/>
+		<control caption="Unstable hosts"/>
 		<control caption="Bogus results"/>
-		<control caption="Filter"/>
-		<control caption="Cancel"/>
+		<control caption="DRM files"/>
+		<control caption="Adult results"/>
+		<control caption="Suspicious files"/>
+		<control caption="Filters:"/>
 		<control/>
 		<control caption="Set as default"/>
 		<control caption="_Save as"/>
 		<control caption="_Delete"/>
-		<control caption="Filters:"/>
-		<control caption="DRM files"/>
-		<control caption="Suspicious files"/>
-		<control caption="Adult results"/>
+		<control caption="Filter"/>
+		<control caption="Cancel"/>
 	</dialog>
 	<dialog name="CSaveFilterAsDlg" cookie="EdBuBuSt" caption="Save filter as">
 		<control/>
