Updated Security Rule dialog
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6861 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-en.xml
+++ b/Languages/default-en.xml
@@ -4006,7 +4006,7 @@
 		<control caption="Cancel"/>
 		<control caption="Select a schema from the list, then select the fields to display as columns."/>
 	</dialog>
-	<dialog name="CSecureRuleDlg" cookie="BuStCoStEdBuStEdEdEdEdStEdEdEdEdBuEdBuBuBuStCoStCoEdStEdStEdStBuBu" caption="Security Rule">
+	<dialog name="CSecureRuleDlg" cookie="BuStCoStEdBuStEdEdEdEdStEdEdEdEdBuEdBuBuBuBuStCoStCoEdStEdStEdStBuBu" caption="Security Rule">
 		<control caption="_Rule:"/>
 		<control caption="Type:"/>
 		<control caption="Network (IP) Address|Content Filter"/>
@@ -4021,6 +4021,7 @@
 		<control/>
 		<control caption="Match Any"/>
 		<control caption="Match All"/>
+		<control caption="Reg. Exp."/>
 		<control caption="_Options:"/>
 		<control caption="Action:"/>
 		<control caption="None|Accept|Deny"/>
